# nih-plug

nih_plug_iced/: Cargo.toml
nih_plug_iced/src/: assets.rs  editor.rs  lib.rs  widgets.rs  wrapper.rs
nih_plug_iced/src/widgets/: generic_ui.rs  peak_meter.rs  util.rs
nih_plug_vizia/: Cargo.toml
nih_plug_vizia/src/: lib.rs  vizia_assets.rs
nih_plug_vizia/src/widgets/: peak_meter.rs  resize_handle.rs  util.rs
plugins/examples/gain_gui_iced/: Cargo.toml
plugins/examples/gain_gui_iced/src/: editor.rs  main.rs
