[package]
name = "gain_gui_iced"
version = "0.1.0"
edition = "2021"
authors = ["Robbert van der Helm <mail@robbertvanderhelm.nl>"]
license = "ISC"

description = "A simple gain plugin with an iced GUI"

[lib]
# The `lib` artifact is needed for the standalone target
crate-type = ["cdylib", "lib"]


[dependencies]
nih_plug = { path = "../../../", features = [
  "assert_process_allocs",
  "standalone",
] }
nih_plug_iced = { path = "../../../nih_plug_iced" }

atomic_float = "0.1"
